added changes to the swagger documentation
